--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,21 @@ body{
 	font-weight: normal;
 	line-height: 1.3;
 	font-family: serif;
-	
+
 }
 
 
 
 body H1{
 	font-size: 64px;
-	font-weight: bolder;	
+	font-weight: bolder;
 }
 
 
 
 body H2{
 	font-size: 20px;
-	font-weight: normal;	
+	font-weight: normal;
 }
 
 
@@ -45,12 +45,12 @@ a{
 	body {
 		font-size: 6px;
 		line-height: 1;
-		
+
 	}
 	#navbar{
 		display: none;
 	}
-	
+
 }
 
 
@@ -68,7 +68,7 @@ a{
 	#navbar{
 		display: none;
 	}
-	
+
 }
 
 
@@ -88,9 +88,9 @@ a{
 	#navbar{
 		display: none;
 	}
-	
-	
-	
+
+
+
 }
 
 
@@ -109,22 +109,22 @@ a{
 	}
 	.dropdown {
 		display: none;
-		
+
 	}
 
-	
+
 }
 
 
 
 @media screen and (min-width: 900px) {
-	
+
 	.dropdown {
 		display: none;
-		
+
 	}
 
-	
+
 }
 
 
@@ -134,10 +134,10 @@ a{
 	#container{
 		max-width: 720px;
 	}
-	
-	
 
-	
+
+
+
 }
 
 
@@ -182,19 +182,19 @@ a{
 	margin-left: auto;
 	margin-right: auto;
 	position: relative;
-	
-}	
-	
-	
-	
-	
+
+}
+
+
+
+
 #title{
 	position: absolute;
 	bottom: 10%;
 	left: 5%;
 	color: #ffffff;
 	font-family: sans-serif;
-	
+
 }
 
 
@@ -205,8 +205,8 @@ a{
 	bottom: 10%;
 	left: 5%;
 	color: #ffffff;
-	font-family: sans-serif;	
-	
+	font-family: sans-serif;
+
 }
 
 
@@ -218,7 +218,7 @@ a{
 	position: absolute;
 	top: 1%;
 	right: 5%;
-	
+
 }
 
 #navmenu{
@@ -226,7 +226,7 @@ a{
 	position: absolute;
 	top: 5%;
 	right: 5%;
-	
+
 }
 
 
@@ -235,15 +235,15 @@ a{
 #navbar ul li{
 	display: inline-block;
 	font-family: sans-serif;
-	
-	
+
+
 }
 
 
 
 
 #footer{
-	
+
 	text-align: center;
 	padding-top: 5%;
 }
@@ -277,7 +277,7 @@ a{
 	color: #ffffff;
 	border-radius: 15px;
 	padding-bottom: 5%;
-	
+
 }
 
 
@@ -298,7 +298,7 @@ a{
 .contents{
 	display: inline-block;
 	width: 100%;
-	
+
 }
 
 
@@ -327,7 +327,7 @@ a{
 	padding-left: 4%;
 	padding-right: 2%;
 	padding-bottom: 4%;
-	
+
 }
 
 
@@ -352,7 +352,7 @@ a{
 	width: 40%;
 	display: inline-block;
 	overflow: hidden;
-	
+
 }
 
 
@@ -365,7 +365,7 @@ a{
 	padding-top: 5%;
 	vertical-align: top;
 	text-align: center;
-	
+
 }
 
 
@@ -392,7 +392,7 @@ a{
 	margin-left: 5%;
 	margin-right: 5%;
 	padding-top: 3%;
-	padding-left: 2%;	
+	padding-left: 2%;
 }
 
 
@@ -406,8 +406,8 @@ a{
 	padding-top: 5%;
 	margin-right: 5%;
 	padding-bottom: 4%;
-	vertical-align: top;	
-	
+	vertical-align: top;
+
 }
 
 
@@ -417,16 +417,24 @@ a{
 /* JAVASCRIPT NAV  */
 
 .dropbtn {
-    
+
     padding: 16px;
     font-size: 16px;
     border: none;
+    text-align: center;
 }
 
+
+.dropbtn.touch{
+  background-color: #9e9e9e;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
+}
 #menubutton{
 	width: 30px;
 	height: 30px;
 	background-image: url("../images/menucon.png");
+  background-position: right 15px bottom 15px;
 	background-repeat: no-repeat;
 }
 /*.dropdown-content a:hover {background-color: #f535e0}
@@ -459,7 +467,7 @@ a{
     position: absolute;
 	top: 5%;
 	right: 5%;
-	
+
 }
 
 .dropdown-content {
@@ -472,7 +480,7 @@ a{
     cursor: none;
 	font-family: sans-serif;
 	color: #ffffff;
-	
+
 }
 
 .dropdown-content a {
@@ -480,7 +488,7 @@ a{
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-	
+
 }
 
 .dropdown.touch {
@@ -519,6 +527,5 @@ a{
     display: block;
 }
 .dropbtn.touch{
-  
-}
 
+}
