--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,11 @@ a{
 	text-shadow: none;
 }
 
+#drophover{
+	font-size: 16px;
+	text-align: center;
+}
+
 
 
 /* RESPONSIVE */
@@ -426,7 +431,7 @@ a{
 
 
 .dropbtn.touch{
-  background-color: #9e9e9e;
+  background-color: #5f83b5;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 
 }
@@ -434,8 +439,9 @@ a{
 	width: 30px;
 	height: 30px;
 	background-image: url("../images/menucon.png");
-  background-position: right 15px bottom 15px;
+	background-position: right 15px bottom 15px;
 	background-repeat: no-repeat;
+	border-radius: 15px 15px 0px 0px;
 }
 /*.dropdown-content a:hover {background-color: #f535e0}
 
@@ -474,12 +480,13 @@ a{
     display: none;
     position: absolute;
     right: 0;
-    background-color: #ffffff;
+    background-color: #5f83b5;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     cursor: none;
 	font-family: sans-serif;
 	color: #ffffff;
+	border-radius: 15px 0px 15px 15px;
 
 }
 
@@ -511,8 +518,9 @@ a{
 
 .dropdown-content .hoveron {
 
-    background-color: #9e9e9e;
+    background-color: #ffffff;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	
 
 }
 
